Improve login / logout experience

--- a/Client/Shared/LoginDisplay.razor
+++ b/Client/Shared/LoginDisplay.razor
@@ -14,7 +14,7 @@
 
 @code{
     private void BeginSignOut(MouseEventArgs args)
-    {
-        Navigation.NavigateTo("/.auth/logout");
+    {        
+        Navigation.NavigateTo("/.auth/logout", true);
     }
 }
